load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "smoke_test",
    srcs = ["smoke_test.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_aot",
    srcs = ["smoke_test_aot.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_modules",
    srcs = ["smoke_test_modules.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_print",
    srcs = ["smoke_test_print.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_vec",
    srcs = ["smoke_test_vec.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_lsp",
    srcs = ["smoke_test_lsp.sh"],
    data = ["//compiler:kard-lsp"],
)

sh_test(
    name = "smoke_test_lsp_rich",
    srcs = ["smoke_test_lsp_rich.sh"],
    data = ["//compiler:kard-lsp"],
)

# Phase 20b: LSP find-all-references + rename, driven over stdio JSON-RPC.
sh_test(
    name = "smoke_test_lsp_edit",
    srcs = ["smoke_test_lsp_edit.sh"],
    data = ["//compiler:kard-lsp"],
)

# Phase 20b: kard.toml package manifest + local-path dependency resolution.
# Needs kardc (the compiler) plus the `kard` wrapper (which carries the
# manifest logic); the fixture project is created in a mktemp -d at runtime.
sh_test(
    name = "smoke_test_manifest",
    srcs = ["smoke_test_manifest.sh"],
    data = [
        "//:kard",
        "//compiler:kardc",
    ],
)

sh_test(
    name = "smoke_test_cache",
    srcs = ["smoke_test_cache.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_async",
    srcs = ["smoke_test_async.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_async_runtime",
    srcs = ["smoke_test_async_runtime.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_fnptr",
    srcs = ["smoke_test_fnptr.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_loops",
    srcs = ["smoke_test_loops.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_surface",
    srcs = ["smoke_test_surface.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_effects",
    srcs = ["smoke_test_effects.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_closures",
    srcs = ["smoke_test_closures.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_closures2",
    srcs = ["smoke_test_closures2.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_dyn",
    srcs = ["smoke_test_dyn.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_iter",
    srcs = ["smoke_test_iter.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_containers",
    srcs = ["smoke_test_containers.sh"],
    data = ["//compiler:kardc"],
)

# Phase 21a: generic trait *parameters* — `trait Foo<T>`, `impl Foo<C> for T`,
# bounds `<C: Foo<T>>`, and the migrated generic `Iterator<T>` prelude.
sh_test(
    name = "smoke_test_generic_traits",
    srcs = ["smoke_test_generic_traits.sh"],
    data = ["//compiler:kardc"],
)

# Phase 21b: `where` clauses (desugared onto the inline bound machinery —
# verified by byte-identical IR) + associated types (`type Item;` / `Self::Item`
# / `C::Item` at a bounded call site).
sh_test(
    name = "smoke_test_where",
    srcs = ["smoke_test_where.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_fmt",
    srcs = ["smoke_test_fmt.sh"],
    data = [
        "//compiler:kardc",
        "//compiler:kardfmt",
    ],
)

sh_test(
    name = "smoke_test_debuginfo",
    srcs = ["smoke_test_debuginfo.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_drop",
    srcs = ["smoke_test_drop.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_generic",
    srcs = ["smoke_test_generic.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_executor",
    srcs = ["smoke_test_executor.sh"],
    # flaky: this test asserts timing LOWER bounds on the async executor; on a
    # loaded/slow macOS CI runner the bounds occasionally miss (a scheduling
    # flake, not a correctness bug — deterministic on Linux). Retry up to 3×.
    flaky = True,
    data = ["//compiler:kardc"],
)

# v21 Phase 121: the spawn+join async frame leak — per-handle release, RSS-flat.
sh_test(
    name = "smoke_test_spawnleak",
    srcs = ["smoke_test_spawnleak.sh"],
    data = ["//compiler:kardc"],
)

# v21 Phase 122: HashMap/HashSet remove via backward-shift deletion (tombstone-
# free). Probe-chain preservation (head/middle/tail/wrap), a 50-key oracle, and
# heap-clean String-map remove + 200k churn under MALLOC_CHECK_=3 (RSS-flat).
sh_test(
    name = "smoke_test_hashremove",
    srcs = ["smoke_test_hashremove.sh"],
    data = ["//compiler:kardc"],
)

# v21 Phase 123: generic Mutex<T> cell (was Mutex<i64>). bool/struct/i64 cells,
# heap-clean Mutex<String> (get-clones/set-drops, RSS-flat), and a struct cell
# shared across two threads landing on the exact total (mutual exclusion).
sh_test(
    name = "smoke_test_mutex_generic",
    srcs = ["smoke_test_mutex_generic.sh"],
    data = ["//compiler:kardc"],
)

# v22 Phase 124: `||` short-circuit logical-or. Truth table, short-circuit (a
# trapping `10/0` in a dead rhs is skipped), precedence below `&&` (both
# directions), and the zero-param closure `|| body` left intact. JIT + AOT.
sh_test(
    name = "smoke_test_phase124",
    srcs = ["smoke_test_phase124.sh"],
    data = ["//compiler:kardc"],
)

# v22 Phase 125: `&<temporary>` materializes a dropped statement-scoped slot
# (the &A(10) ref-to-enum-literal fix). &enum/&int/&struct-literal borrow; a
# droppable temporary drops exactly once (RSS-flat, MALLOC_CHECK clean over
# 500k); `&()` (a unit value) stays a clean codegen error. JIT + AOT.
sh_test(
    name = "smoke_test_phase125",
    srcs = ["smoke_test_phase125.sh"],
    data = ["//compiler:kardc"],
)

# v23 Phase 129: the `--emit-c` C backend, differentially gated against LLVM.
# For each i64/bool-subset program the LLVM AOT exit code must equal the
# emitted-C-compiled-by-the-system-cc exit code; an out-of-subset (struct)
# program is refused with a clean error. Skips cleanly if no C compiler.
sh_test(
    name = "smoke_test_phase129",
    srcs = ["smoke_test_phase129.sh"],
    data = ["//compiler:kardc"],
)

# v24 Phase 130: rich diagnostics — snippet + caret + user-relative line numbers
# (the prelude offset is recovered). Asserts snippet structure on parse/type/
# borrow errors and that a valid program emits no diagnostics.
sh_test(
    name = "smoke_test_phase130",
    srcs = ["smoke_test_phase130.sh"],
    data = ["//compiler:kardc"],
)

# v24 Phase 131: parser panic-mode error recovery — one diagnostic per error.
sh_test(
    name = "smoke_test_phase131",
    srcs = ["smoke_test_phase131.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 135: default trait methods (inherit / override / chain).
sh_test(
    name = "smoke_test_phase135",
    srcs = ["smoke_test_phase135.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 136: supertraits — coverage enforced; subtrait defaults reach them.
sh_test(
    name = "smoke_test_phase136",
    srcs = ["smoke_test_phase136.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 137: blanket impls (impl<T: Bound> Trait for T).
sh_test(
    name = "smoke_test_phase137",
    srcs = ["smoke_test_phase137.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 138: coherence / overlap checking (conflicting impls rejected).
sh_test(
    name = "smoke_test_phase138",
    srcs = ["smoke_test_phase138.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 139: associated consts (const N: T in trait/impl, read Type::N()).
sh_test(
    name = "smoke_test_phase139",
    srcs = ["smoke_test_phase139.sh"],
    data = ["//compiler:kardc"],
)

# v25 Phase 140: standard conversion vocabulary (From<T> / Into<U>).
sh_test(
    name = "smoke_test_phase140",
    srcs = ["smoke_test_phase140.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 141: or-patterns (p1 | p2 => e).
sh_test(
    name = "smoke_test_phase141",
    srcs = ["smoke_test_phase141.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 142: struct patterns in match arms.
sh_test(
    name = "smoke_test_phase142",
    srcs = ["smoke_test_phase142.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 143: slice patterns ([a, b, ..]) in match arms.
sh_test(
    name = "smoke_test_phase143",
    srcs = ["smoke_test_phase143.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 145: Fn/FnMut/FnOnce closure-trait hierarchy + capture classification.
sh_test(
    name = "smoke_test_phase145",
    srcs = ["smoke_test_phase145.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 146: two-phase borrows + module visibility + use/pub-use imports.
sh_test(
    name = "smoke_test_phase146",
    srcs = ["smoke_test_phase146.sh"],
    data = ["//compiler:kardc"],
)

# v27 Phase 147: the `char` type (Unicode scalar) + UTF-8 char<->string bridges.
sh_test(
    name = "smoke_test_phase147",
    srcs = ["smoke_test_phase147.sh"],
    data = ["//compiler:kardc"],
)

# v27 Phase 151: char classification + string encode helpers.
sh_test(
    name = "smoke_test_phase151",
    srcs = ["smoke_test_phase151.sh"],
    data = ["//compiler:kardc"],
)

# v27 Phase 150: the Debug trait + {:?} format spec + #[derive(Debug)].
sh_test(
    name = "smoke_test_phase150",
    srcs = ["smoke_test_phase150.sh"],
    data = ["//compiler:kardc"],
)

# v27 Phase 149: format! / print! / println! formatting forms.
sh_test(
    name = "smoke_test_phase149",
    srcs = ["smoke_test_phase149.sh"],
    data = ["//compiler:kardc"],
)

# v27 Phase 148: UTF-8 correctness — char iteration / indexing / validation.
sh_test(
    name = "smoke_test_phase148",
    srcs = ["smoke_test_phase148.sh"],
    data = ["//compiler:kardc"],
)

# v26 Phase 144: type aliases (type Name = Target).
sh_test(
    name = "smoke_test_phase144",
    srcs = ["smoke_test_phase144.sh"],
    data = ["//compiler:kardc"],
)

# v24 Phase 132: opt-in lint (-W) — unused vars + unreachable code, non-fatal,
# no false positives (closure / fn-ptr / method / match uses recognized).
sh_test(
    name = "smoke_test_phase132",
    srcs = ["smoke_test_phase132.sh"],
    data = ["//compiler:kardc"],
)

# v24 Phase 133: error codes in diagnostics + `kardc --explain Exxxx`.
sh_test(
    name = "smoke_test_phase133",
    srcs = ["smoke_test_phase133.sh"],
    data = ["//compiler:kardc"],
)

# v24 Phase 134: /// doc comments — formatter round-trip + LSP hover surface.
sh_test(
    name = "smoke_test_phase134",
    srcs = ["smoke_test_phase134.sh"],
    data = [
        "//compiler:kard-lsp",
        "//compiler:kardc",
        "//compiler:kardfmt",
    ],
)

# v18 Phase 109: a unit-result async future (block_on / .await / spawn+join)
# crashed the compiler (void load/return); now compiles + runs.
sh_test(
    name = "smoke_test_unitasync",
    srcs = ["smoke_test_unitasync.sh"],
    data = ["//compiler:kardc"],
)

# v18 Phase 110: a differential fuzzer over the arithmetic/codegen path — random
# i64 expression programs, JIT == AOT == python reference (seeded, reproducible).
sh_test(
    name = "smoke_test_fuzz_arith",
    srcs = ["smoke_test_fuzz_arith.sh"],
    data = ["//compiler:kardc"],
)

# v18 Phase 111: a differential fuzzer over the CONTROL-FLOW path — random
# let/comparison/if-else programs, JIT == AOT == python reference.
sh_test(
    name = "smoke_test_fuzz_control",
    srcs = ["smoke_test_fuzz_control.sh"],
    data = ["//compiler:kardc"],
)

# v19 Phase 112: a MEMORY-SAFETY fuzzer — random struct/Drop/partial-move
# programs, each heap-clean under MALLOC_CHECK_=3 with every field dropped once.
sh_test(
    name = "smoke_test_fuzz_memsafety",
    srcs = ["smoke_test_fuzz_memsafety.sh"],
    data = ["//compiler:kardc"],
)

# v19 Phase 113: a differential fuzzer for the DIVISION / MODULO / BITWISE codegen
# (C-semantics: truncating sdiv, dividend-signed srem, arithmetic >>).
sh_test(
    name = "smoke_test_fuzz_div",
    srcs = ["smoke_test_fuzz_div.sh"],
    data = ["//compiler:kardc"],
)

# v19 Phase 114: a codegen error reports the REAL diagnostic, not cascading
# "module verification failed" noise from the placeholder IR.
sh_test(
    name = "smoke_test_diag",
    srcs = ["smoke_test_diag.sh"],
    data = ["//compiler:kardc"],
)

sh_test(
    name = "smoke_test_threads",
    srcs = ["smoke_test_threads.sh"],
    data = ["//compiler:kardc"],
)

# Phase 20a: opt-level flags (-O0..-O3) + the `kardc --test` runner + the RPN
# capstone. The capstone program text is inlined in the script so the Bazel
# sandbox needs no extra source data beyond kardc itself.
sh_test(
    name = "smoke_test_toolchain",
    srcs = ["smoke_test_toolchain.sh"],
    data = ["//compiler:kardc"],
)

# Phase 22: fixed-size arrays `[T; N]` + tuples `(A, B)` — literals, indexing,
# fn params/returns, struct fields, mutation, `let` destructuring, nesting, and
# negative cases; through JIT + AOT.
sh_test(
    name = "smoke_test_aggregates",
    srcs = ["smoke_test_aggregates.sh"],
    data = ["//compiler:kardc"],
)

# Phase 23: real panic + unwinding (setjmp/longjmp + a runtime cleanup stack) —
# Drop runs on unwind (reverse order), `catch` recovers, an uncaught panic
# exits 101 with a stderr message, exactly-once drops on the normal AND panic
# paths (no double-free / leak, incl. a 100k-unwind heap-Vec loop), array `[T;N]`
# OOB indexing panics, and panic/catch effect-checking is consistent; JIT + AOT.
sh_test(
    name = "smoke_test_panic",
    srcs = ["smoke_test_panic.sh"],
    data = ["//compiler:kardc"],
)

# Phase 24: user-declarable `extern "C"` FFI — calling libc fns (abs/strlen/
# putchar/getpid) with correct C-int width handling (i32 narrow/widen), the
# &String -> C-pointer mapping, and the `io` effect carried by extern calls;
# through JIT + AOT.
sh_test(
    name = "smoke_test_ffi",
    srcs = ["smoke_test_ffi.sh"],
    data = ["//compiler:kardc"],
)

# Phase 25: compile-time constants + const evaluation — `const` items folded to
# literals (verified in the IR), `const fn` evaluated in const contexts, a const
# referencing another const, const-generic array lengths (`[i64; N]` /
# `[i64; sq(2)]`, lifting Phase 22's literal-only N), a const fn still usable at
# runtime, and clear (bounded, non-crashing) errors for div0 / non-evaluable /
# cyclic / runaway / overflow; through JIT + AOT.
sh_test(
    name = "smoke_test_const",
    srcs = ["smoke_test_const.sh"],
    data = ["//compiler:kardc"],
)

# Phase 26 capstone: a recursive-descent arithmetic expression interpreter
# written in kardashev (tokenizer over str_char_at + a precedence parser that
# returns (value, pos, err) tuples + on-the-fly evaluation), plus a focused
# str_char_at builtin check (in-bounds byte / past-end -> -1). The test builds
# the ACTUAL examples/calc/main.kd, so the shipped capstone source is staged
# into the sh_test runfiles alongside kardc.
sh_test(
    name = "smoke_test_calc",
    srcs = ["smoke_test_calc.sh"],
    data = [
        "//compiler:kardc",
        "//examples/calc:main.kd",
    ],
)

# Phase 27 string toolkit: str_eq (byte-exact, incl. empty/length-mismatch),
# str_substring (start/len clamped into bounds), int_to_string (signed decimal),
# print_no_nl (no trailing newline) + println, and a heap-owned-growth check
# (string_push_str onto an int_to_string result); through JIT + AOT.
sh_test(
    name = "smoke_test_strings",
    srcs = ["smoke_test_strings.sh"],
    data = ["//compiler:kardc"],
)

# Phase 28: the Hash + Eq traits, multiple trait bounds (T: A + B), a generic
# HashMap<K,V> (i64 / String / user-type keys via their Hash+Eq impls), and
# HashSet<T>; through JIT + AOT, with the non-hashable-key and unknown-bound
# rejections.
sh_test(
    name = "smoke_test_hash",
    srcs = ["smoke_test_hash.sh"],
    data = ["//compiler:kardc"],
)

# Phase 29: the documented closure-env and match-payload Drop leaks are
# plugged — a loop creating + dropping capturing closures, and one matching +
# dropping heap Strings, both run in constant memory; a payload binding moved
# out of its arm survives (no UAF). Through JIT + AOT.
sh_test(
    name = "smoke_test_dropleaks",
    srcs = ["smoke_test_dropleaks.sh"],
    data = ["//compiler:kardc"],
)

# Phase 30: file I/O over Result<_, IoError> (write -> exists -> read+compare
# round-trip, missing-file -> IoNotFound) and CLI args (args / arg_count /
# arg_get, with the AOT argv-capture). Through JIT + AOT.
sh_test(
    name = "smoke_test_io",
    srcs = ["smoke_test_io.sh"],
    data = ["//compiler:kardc"],
)

# Phase 31: the two v5 capstones written in kardashev — a JSON object parser
# (HashMap<String, i64>) and a kardashev-subset lexer (Vec<Tok> + keyword
# classification). Builds the SHIPPED example sources, JIT + AOT.
sh_test(
    name = "smoke_test_capstones",
    srcs = ["smoke_test_capstones.sh"],
    data = [
        "//compiler:kardc",
        "//examples/kdlex:main.kd",
    ],
)

# Phase 32: doc-lint truth-pass guard — asserts the rewritten docs/ don't
# regress to stale v1-era claims and still document the v5 stdlib. (The
# source-comment "(stub)" check runs in the Makefile build, where the tree is
# available; here it greps the doc data.)
sh_test(
    name = "smoke_test_doclint",
    srcs = ["smoke_test_doclint.sh"],
    data = [
        "//docs:architecture.md",
        "//docs:effects.md",
        "//docs:language-reference.md",
        "//docs:stdlib.md",
    ],
)

# Phase 33: the `%` / `&&` operators (incl. short-circuit) and HashMap/HashSet
# interior drop + rehash-buffer reclaim (constant-memory probe). JIT + AOT.
sh_test(
    name = "smoke_test_phase33",
    srcs = ["smoke_test_phase33.sh"],
    data = ["//compiler:kardc"],
)

# Phase 34: read-without-move — vec_get_ref / hashmap_get_ref (Option<&V>) /
# the `*r` deref operator / match-through-&Enum (binding payloads as borrows),
# with a constant-memory by-reference traversal loop. JIT + AOT.
sh_test(
    name = "smoke_test_refread",
    srcs = ["smoke_test_refread.sh"],
    data = ["//compiler:kardc"],
)

# Phase 35: sound recursive heap enums (cycle-guarded layout + a recursive drop
# function) + the `clone` deep-copy intrinsic (String/Vec/HashMap/Box/user
# structs+enums, recursive types via a per-type clone fn). JIT + AOT.
sh_test(
    name = "smoke_test_clone",
    srcs = ["smoke_test_clone.sh"],
    data = ["//compiler:kardc"],
)

# Phase 36: enum-typed struct fields (mutual struct/enum layout) + non-Copy
# tuple elements (drop) + tuple `match` patterns + Result error propagation.
sh_test(
    name = "smoke_test_phase36",
    srcs = ["smoke_test_phase36.sh"],
    data = ["//compiler:kardc"],
)

# Phase 37: the Display/to_string trait (+ built-in impls) + de-i64'd generic
# iteration (for-loop binds the iterator's real next() payload) + generic
# `&[T]` slice reads (slice_len / slice_get / slice_get_ref over any T).
sh_test(
    name = "smoke_test_phase37",
    srcs = ["smoke_test_phase37.sh"],
    data = ["//compiler:kardc"],
)

# Phase 38 capstone: the full nested-JSON example — parse + serialize, round-trip
# by deep-equality, leak-free under a constant-memory loop. Builds the SHIPPED
# example source (//examples/json:main.kd) so the test doubles as a build check.
sh_test(
    name = "smoke_test_json",
    srcs = ["smoke_test_json.sh"],
    data = [
        "//compiler:kardc",
        "//examples/json:main.kd",
    ],
)

# Phase 39: f64 floating-point — literals, arithmetic/comparison, conversions
# (to_f64 / float_to_int), Vec<f64>, print_f64. JIT + AOT.
sh_test(
    name = "smoke_test_phase39",
    srcs = ["smoke_test_phase39.sh"],
    data = ["//compiler:kardc"],
)

# Phase 40: generic `impl<T: Bound> Trait for Container<T>` blocks — per-T
# monomorphization, on user structs + built-in containers, bound-enforced.
sh_test(
    name = "smoke_test_phase40",
    srcs = ["smoke_test_phase40.sh"],
    data = ["//compiler:kardc"],
)

# Phase 41: generic Clone/Eq over containers — `.clone()` / `.eq()` dispatch
# through each element's own impl (Vec<Pair<String>> -> Pair -> String).
sh_test(
    name = "smoke_test_phase41",
    srcs = ["smoke_test_phase41.sh"],
    data = ["//compiler:kardc"],
)

# Phase 42: #[derive(Clone, Eq, Display)] — synthesized field/payload-wise impls
# on structs + enums (incl. recursive + generic), via re-parsed impl source.
sh_test(
    name = "smoke_test_phase42",
    srcs = ["smoke_test_phase42.sh"],
    data = ["//compiler:kardc"],
)

# Phase 43: runtime string escapes (str_escape / str_unescape over
# str_push_byte) + async-frame reclaim (block_on reaps idle frames/slots; an
# .await frees the completed sub-future's frame). JIT + AOT.
sh_test(
    name = "smoke_test_phase43",
    srcs = ["smoke_test_phase43.sh"],
    data = ["//compiler:kardc"],
)

# Phase 45 (v8): a bounded `K: Hash + Eq` type param satisfies HashMap's key
# requirement from inside a generic fn / generic-impl method body (the
# key-hashable gate accepts a bounded Var, not just concrete i64/String). JIT +
# AOT, plus a negative test that an unbounded key param is rejected.
sh_test(
    name = "smoke_test_phase45",
    srcs = ["smoke_test_phase45.sh"],
    data = ["//compiler:kardc"],
)

# Phase 46 (v8): generic Clone/Eq TRAIT impls for HashMap (the v7 deferral) —
# direct map.clone()/map.eq() (order-independent), #[derive(Clone, Eq)] over a
# struct with a HashMap field, and a no-regression check that a map-free derived
# eq stays pure. JIT + AOT.
sh_test(
    name = "smoke_test_phase46",
    srcs = ["smoke_test_phase46.sh"],
    data = ["//compiler:kardc"],
)

# Phase 47 (v8): Ord trait (cmp -> -1/0/1) + a generic in-place sort<T: Ord>
# (insertion sort over a new ownership-neutral vec_swap), proven for i64 /
# String / f64 / a user Ord type. JIT + AOT.
sh_test(
    name = "smoke_test_phase47",
    srcs = ["smoke_test_phase47.sh"],
    data = ["//compiler:kardc"],
)

# Phase 48 (v8): #[derive(Hash, Ord, Default)] — Hash combines field hashes
# (derived HashMap keys), Ord is lexicographic (derived sort), Default builds
# field-wise via the static `Type::default()` associated method (a new no-self
# trait-method + qualified-call capability). JIT + AOT.
sh_test(
    name = "smoke_test_phase48",
    srcs = ["smoke_test_phase48.sh"],
    data = ["//compiler:kardc"],
)

# Phase 49 (v8): generic trait objects — a `dyn Trait<Arg>` carries the trait's
# concrete arg (bound when resolving method sigs), and dispatch works through
# the `&Box<dyn>` that vec_get_ref returns, so a heterogeneous Vec<Box<dyn ...>>
# is iterated with dynamic dispatch. JIT + AOT.
sh_test(
    name = "smoke_test_phase49",
    srcs = ["smoke_test_phase49.sh"],
    data = ["//compiler:kardc"],
)

# Phase 51 (v9): Box<T> is a registrable impl target (method dispatch prefers a
# Box impl over auto-deref) + `&*`/`**` deref ergonomics, so the prelude ships
# Clone/Eq for Box<T> and #[derive(Clone, Eq)] covers a Box field (recursive
# types). JIT + AOT.
sh_test(
    name = "smoke_test_phase51",
    srcs = ["smoke_test_phase51.sh"],
    data = ["//compiler:kardc"],
)

# Phase 52 (v9): generic associated functions — a static trait method on a
# bounded type param `T::method()` (e.g. `T::default()` for `<T: Default>`),
# monomorphized per instance. JIT + AOT.
sh_test(
    name = "smoke_test_phase52",
    srcs = ["smoke_test_phase52.sh"],
    data = ["//compiler:kardc"],
)

# Phase 53 (v9): generic Vec higher-order combinators (vec_map / vec_filter /
# vec_fold) over closures, effect-polymorphic in the closure's effect row,
# returning fresh owned Vecs. JIT + AOT + a constant-memory gate.
sh_test(
    name = "smoke_test_phase53",
    srcs = ["smoke_test_phase53.sh"],
    data = ["//compiler:kardc"],
)

# Phase 54 (v9): string tokenizing — str_split (split on a byte, empty pieces
# kept) + str_trim (ASCII whitespace), written in kardashev. JIT + AOT +
# constant-memory gate.
sh_test(
    name = "smoke_test_phase54",
    srcs = ["smoke_test_phase54.sh"],
    data = ["//compiler:kardc"],
)

# Phase 55 (v9): hashmap_entries -> Vec<(K,V)> (deep-cloned tuples), so a map is
# rankable/printable without manual key lookups. JIT + AOT + constant-memory.
sh_test(
    name = "smoke_test_phase55",
    srcs = ["smoke_test_phase55.sh"],
    data = ["//compiler:kardc"],
)

# Pre-merge review fixes: a soundness regression guard locking in the 5 memory-
# safety / type-soundness blocker fixes + the dyn/generic effect attribution.
sh_test(
    name = "smoke_test_soundness",
    srcs = ["smoke_test_soundness.sh"],
    data = ["//compiler:kardc"],
)

# Phase 57 (v10): const-generic params parse/bind + symbolic `[T; N]` lengths +
# tuple-let annotation (declaration shell only). JIT + AOT.
sh_test(
    name = "smoke_test_phase57",
    srcs = ["smoke_test_phase57.sh"],
    data = ["//compiler:kardc"],
)

# Phase 58 (v10): monomorphize over a const VALUE — `Mat<3>` and `Mat<5>` become
# distinct LLVM struct types (`[3 x i64]` vs `[5 x i64]`), incl. a 2-D
# `Matrix<R, C>`; dimension / slot mismatches are compile errors. JIT + AOT.
sh_test(
    name = "smoke_test_phase58",
    srcs = ["smoke_test_phase58.sh"],
    data = ["//compiler:kardc"],
)

# Phase 59 (v10): const-generic FUNCTIONS — `dot<const N>` infers N from the
# argument array lengths, uses it as a value, monomorphizes per size, and a
# dimension mismatch is a compile error. JIT + AOT.
sh_test(
    name = "smoke_test_phase59",
    srcs = ["smoke_test_phase59.sh"],
    data = ["//compiler:kardc"],
)

# Phase 60 (v10): the effect-subset rule — a trait impl method's effects must be
# a SUBSET of the trait method's, so dyn/generic effect attribution is sound by
# construction. Drop (static drop glue) is exempt. JIT.
sh_test(
    name = "smoke_test_phase60",
    srcs = ["smoke_test_phase60.sh"],
    data = ["//compiler:kardc"],
)

# Phase 61 (v10): RingBuffer<T, const CAP> — mixed type+const generics, Drop +
# deep clone over a NON-Copy element, symbolic const params through a generic
# impl; plus closure-param inference (`vec_map(v, |x| ..)`). JIT + AOT.
sh_test(
    name = "smoke_test_phase61",
    srcs = ["smoke_test_phase61.sh"],
    data = ["//compiler:kardc"],
)

# Phase 62 (v10) CAPSTONE: a fixed-size linear-algebra library —
# Matrix<const R, const C>, transpose() -> Matrix<C,R>, dimension-checked
# matmul; a shape mismatch is a COMPILE error. Builds examples/matrix/main.kd.
sh_test(
    name = "smoke_test_phase62",
    srcs = ["smoke_test_phase62.sh"],
    data = [
        "//compiler:kardc",
        "//examples/matrix:main.kd",
    ],
)

# v10 adversarial-review regression guard: pins the 5 blockers + majors a
# 6-dimension multi-agent review found (and that the green smoke suite missed)
# — nested const-generic field mangling, const enums, bare const-generic clone,
# dyn-Drop effect laundering, bounded-generic effect attribution, symbolic
# dimension forwarding, and the mangling collision. The v10 soundness floor.
sh_test(
    name = "smoke_test_v10_review",
    srcs = ["smoke_test_v10_review.sh"],
    data = ["//compiler:kardc"],
)

# Phase 63 (v11 — the numeric tower): sized signed machine integers i8/i16/i32,
# width-correct LLVM lowering, a non-coercive lattice (no implicit widening).
sh_test(
    name = "smoke_test_phase63",
    srcs = ["smoke_test_phase63.sh"],
    data = ["//compiler:kardc"],
)

# Phase 64 (v11 — the numeric tower): integer-literal width suffixes (5i32) and
# radix prefixes (0xFF / 0b1010), incl. radix+suffix combos and match patterns.
sh_test(
    name = "smoke_test_phase64",
    srcs = ["smoke_test_phase64.sh"],
    data = ["//compiler:kardc"],
)

# Phase 65 (v11 — the numeric tower): the `as` cast operator + conversion matrix
# (sext/trunc/sitofp/fptosi), precedence, chaining, const-fold, non-numeric reject.
sh_test(
    name = "smoke_test_phase65",
    srcs = ["smoke_test_phase65.sh"],
    data = ["//compiler:kardc"],
)

# Phase 66 (v11 — the numeric tower): unsigned ints u8..u64 + bitwise ops
# (& | ^ << >> ~); unsigned div/cmp/lshr vs signed sdiv/cmp/ashr; FNV-1a step.
sh_test(
    name = "smoke_test_phase66",
    srcs = ["smoke_test_phase66.sh"],
    data = ["//compiler:kardc"],
)

# Phase 67 (v11 — the numeric tower): defined two's-complement wrapping overflow
# + the f32 float (LLVM `float`, fpext/fptrunc casts); negative narrow literals.
sh_test(
    name = "smoke_test_phase67",
    srcs = ["smoke_test_phase67.sh"],
    data = ["//compiler:kardc"],
)

# Phase 68 (v11) CAPSTONE: FNV-1a + CRC-32 + a binary parser in kardashev, each
# checked against its known answer. Builds the real examples/checksum/main.kd.
sh_test(
    name = "smoke_test_phase68",
    srcs = ["smoke_test_phase68.sh"],
    data = [
        "//compiler:kardc",
        "//examples/checksum:main.kd",
    ],
)

# v11 pre-merge adversarial-review regressions: const-eval width/sign agreement
# with runtime, the `expr as Type <<`/`<` cast-parse fix, the tuple-index suffix.
sh_test(
    name = "smoke_test_v11_review",
    srcs = ["smoke_test_v11_review.sh"],
    data = ["//compiler:kardc"],
)

# Phase 69 (v12 — real stdlib): string->number parsing (parse_int / parse_f64
# returning Option, all-or-nothing) + int_to_hex formatting.
sh_test(
    name = "smoke_test_phase69",
    srcs = ["smoke_test_phase69.sh"],
    data = ["//compiler:kardc"],
)

# Phase 70 (v12 — real stdlib): Vec mutation + query (pop/remove/insert/reverse,
# contains/index_of); non-Copy moves out via remove/pop with no double-free.
sh_test(
    name = "smoke_test_phase70",
    srcs = ["smoke_test_phase70.sh"],
    data = ["//compiler:kardc"],
)

# Phase 71 (v12 — real stdlib): HashMap/HashSet enumeration + membership
# (hashmap_contains/values, hashset_items).
sh_test(
    name = "smoke_test_phase71",
    srcs = ["smoke_test_phase71.sh"],
    data = ["//compiler:kardc"],
)

# Phase 72 (v12 — real stdlib): String methods (starts_with/ends_with/contains/
# index_of, to_upper/to_lower/concat/repeat).
sh_test(
    name = "smoke_test_phase72",
    srcs = ["smoke_test_phase72.sh"],
    data = ["//compiler:kardc"],
)

# Phase 73 (v12 — real stdlib): integer math helpers + f64 math (LLVM
# float intrinsics) + a few Option/Result inspectors.
sh_test(
    name = "smoke_test_phase73",
    srcs = ["smoke_test_phase73.sh"],
    data = ["//compiler:kardc"],
)

# Phase 74 (v12) CAPSTONE: a CSV statistics aggregator in kardashev. Builds the
# real examples/csvstats/main.kd.
sh_test(
    name = "smoke_test_phase74",
    srcs = ["smoke_test_phase74.sh"],
    data = [
        "//compiler:kardc",
        "//examples/csvstats:main.kd",
    ],
)

# v12 pre-merge adversarial-review regressions: parse_int ERANGE overflow ->
# None, and a discarded owned call-result (vec_remove statement) dropped once.
sh_test(
    name = "smoke_test_v12_review",
    srcs = ["smoke_test_v12_review.sh"],
    data = ["//compiler:kardc"],
)

# Phase 75 (v13 — concurrency): the `share` effect — thread-safety as a CHECKED
# effect (a pure-declared trait can't launder a thread_spawn via the subset rule).
sh_test(
    name = "smoke_test_phase75",
    srcs = ["smoke_test_phase75.sh"],
    data = ["//compiler:kardc"],
)

# Phase 76 (v13 — concurrency): typed MPSC channels over a pthread mutex+condvar;
# a producer thread sums 1..100 -> 5050 deterministic; Receiver is not Send.
sh_test(
    name = "smoke_test_phase76",
    srcs = ["smoke_test_phase76.sh"],
    data = ["//compiler:kardc"],
)

# Phase 77 (v13 — concurrency): the generic channel<T> moves a real T (String,
# Vec) across threads; the structural Send rule rejects sending a borrow.
sh_test(
    name = "smoke_test_phase77",
    srcs = ["smoke_test_phase77.sh"],
    data = ["//compiler:kardc"],
)

# Phase 78 (v13 — concurrency): Rc<T> refcounted shared owner (drop-once, no
# leak) — the legible non-Send witness (sending one on a channel is rejected).
sh_test(
    name = "smoke_test_phase78",
    srcs = ["smoke_test_phase78.sh"],
    data = ["//compiler:kardc"],
)

# Phase 79 (v13 — concurrency): the parallelism payoff — fork-join parallel sum
# over worker threads gathered via an MPSC channel + chan_try_recv (non-blocking).
sh_test(
    name = "smoke_test_phase79",
    srcs = ["smoke_test_phase79.sh"],
    data = ["//compiler:kardc"],
)

# Phase 80 (v13) CAPSTONE: a parallel map-reduce in kardashev. Builds the real
# examples/parstats/main.kd.
sh_test(
    name = "smoke_test_phase80",
    srcs = ["smoke_test_phase80.sh"],
    data = [
        "//compiler:kardc",
        "//examples/parstats:main.kd",
    ],
)

# v13 PRE-MERGE REVIEW regressions: the rc_get/vec_get_ref use-after-free
# (now a borrow error), the unbounded channel leak (block + nodes + undrained
# payloads, now reclaimed at last-endpoint drop), the multi-producer
# chan_close data loss (now closes only when the last Sender is gone), and the
# v14 capture-and-keep footgun (a captured Sender never moved out is rejected).
sh_test(
    name = "smoke_test_v13_review",
    srcs = ["smoke_test_v13_review.sh"],
    data = ["//compiler:kardc"],
)

# v14 Phase 87 (hardening): JIT-vs-AOT differential sweep over the real capstone
# programs — both backends must agree (printed output + the returned value the
# JIT prints / the AOT exits with). One place to catch any codegen divergence.
sh_test(
    name = "smoke_test_differential",
    srcs = ["smoke_test_differential.sh"],
    data = [
        "//compiler:kardc",
        "//examples/calc:main.kd",
        "//examples/checksum:main.kd",
        "//examples/csvstats:main.kd",
        "//examples/json:main.kd",
        "//examples/kdlex:main.kd",
        "//examples/matrix:main.kd",
        "//examples/parstats:main.kd",
        "//examples/rpn:main.kd",
        "//examples/wordfreq:main.kd",
    ],
)

# v15 Phase 88 (self-hosting): a lexer for kardashev written IN kardashev — the
# foundation proof that the compiler front can be expressed in the language.
sh_test(
    name = "smoke_test_phase88",
    srcs = ["smoke_test_phase88.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:lexer.kd",
    ],
)

# v15 Phase 89 (self-hosting): a token-stream lexer (Vec<Token> with kind + span)
# — the typed interface a parser consumes; spans reconstruct via str_substring.
sh_test(
    name = "smoke_test_phase89",
    srcs = ["smoke_test_phase89.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:tokens.kd",
    ],
)

# v15 Phase 90 (self-hosting): a parser for kardashev syntax — a function
# signature parsed into a structured FnSig AST (names/types via str_substring).
sh_test(
    name = "smoke_test_phase90",
    srcs = ["smoke_test_phase90.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:parser.kd",
    ],
)

# v15 Phase 91 (self-hosting): an AST printer — reprints the FnSig AST and checks
# the source -> AST -> source round-trip is lossless.
sh_test(
    name = "smoke_test_phase91",
    srcs = ["smoke_test_phase91.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:printer.kd",
    ],
)

# v15 Phase 92 (self-hosting): a scope checker — a HashMap symbol table over the
# FnSig AST that resolves param types and rejects duplicate parameter names.
sh_test(
    name = "smoke_test_phase92",
    srcs = ["smoke_test_phase92.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:checker.kd",
    ],
)

# v15 Phase 93 CAPSTONE (self-hosting): the whole compiler front end-to-end
# (lex -> parse -> check -> reprint) over real signatures, in kardashev.
sh_test(
    name = "smoke_test_phase93",
    srcs = ["smoke_test_phase93.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:front.kd",
    ],
)

# v16 Phase 94 (self-hosting, cont.): an expression parser + evaluator (Expr AST
# with variable references, precedence, parens; eval over a HashMap env).
sh_test(
    name = "smoke_test_phase94",
    srcs = ["smoke_test_phase94.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:expr.kd",
    ],
)

# v16 Phase 95 (self-hosting, cont.): a statement/block parser + evaluator —
# `let NAME = EXPR ;` bindings + a result expr, evaluated with a growing env.
sh_test(
    name = "smoke_test_phase95",
    srcs = ["smoke_test_phase95.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:stmt.kd",
    ],
)

# v16 Phase 96 (self-hosting, cont.): a scope/semantic checker — walks the block
# AST verifying every variable reference is bound; reports undefined variables.
sh_test(
    name = "smoke_test_phase96",
    srcs = ["smoke_test_phase96.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:scopechk.kd",
    ],
)

# v16 Phase 97 CAPSTONE (self-hosting, cont.): a function-body interpreter tying
# lex -> parse -> scope-check -> evaluate, running a body with arguments.
sh_test(
    name = "smoke_test_phase97",
    srcs = ["smoke_test_phase97.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:interp.kd",
    ],
)

# v17 Phase 98 (self-hosting, cont.): a whole-function parser + interpreter —
# `fn NAME(PARAMS) -> RET { BODY }` parsed into an Fn AST and interpreted.
sh_test(
    name = "smoke_test_phase98",
    srcs = ["smoke_test_phase98.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:func.kd",
    ],
)

# v17 Phase 99: regression for the field-move double-free fix (found by
# self-hosting) — a moved-out non-Copy field is dropped exactly once.
sh_test(
    name = "smoke_test_fieldmove",
    srcs = ["smoke_test_fieldmove.sh"],
    data = ["//compiler:kardc"],
)

# v17 Phase 101 (self-hosting, cont.): a real TYPE CHECKER over an i64/bool
# expression language — arithmetic/comparison/if typing with error propagation.
sh_test(
    name = "smoke_test_phase101",
    srcs = ["smoke_test_phase101.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:typeck.kd",
    ],
)

# v17 Phase 102 (self-hosting, cont.): a whole-FUNCTION type checker — params,
# `let` typing, and the body's type checked against the declared return type.
sh_test(
    name = "smoke_test_phase102",
    srcs = ["smoke_test_phase102.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:funcheck.kd",
    ],
)

# v17 Phase 103 (self-hosting, cont.): the CODEGEN step — AST -> stack-machine
# bytecode -> VM, cross-checked against a reference interpreter for correctness.
sh_test(
    name = "smoke_test_phase103",
    srcs = ["smoke_test_phase103.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:emit.kd",
    ],
)

# v17 Phase 105 CAPSTONE: a self-hosted mini-compiler — type-check a whole
# function, then compile (with `let` locals) + execute it on argument values.
sh_test(
    name = "smoke_test_phase105",
    srcs = ["smoke_test_phase105.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:compile.kd",
    ],
)

# v20 Phase 115 (toward a real bootstrap): the self-hosted compiler emits REAL
# LLVM IR (clang-compiled to native), differential-gated against the host.
# (Skips cleanly if clang is unavailable in the test sandbox.)
sh_test(
    name = "smoke_test_phase115",
    srcs = ["smoke_test_phase115.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:llvmgen.kd",
    ],
)

# v20 Phase 116: a DIFFERENTIAL FUZZER over the self-hosted codegen — random
# functions, self-hosted-emitted LLVM IR (clang->native) must equal the host.
sh_test(
    name = "smoke_test_phase116",
    srcs = ["smoke_test_phase116.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:llvmgen.kd",
    ],
)

# v20 Phase 117: the self-hosted compiler handles STRUCTS — struct literals +
# field access -> LLVM insertvalue/extractvalue, differential-gated vs the host.
sh_test(
    name = "smoke_test_phase117",
    srcs = ["smoke_test_phase117.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:structgen.kd",
    ],
)

# v20 Phase 118: the self-hosted compiler handles ENUMS + match — tagged-pair
# aggregates + a branch-free match select-chain, differential-gated vs the host.
sh_test(
    name = "smoke_test_phase118",
    srcs = ["smoke_test_phase118.sh"],
    data = [
        "//compiler:kardc",
        "//examples/selfhost:enumgen.kd",
    ],
)

# v21 Phase 120 (prove it): benchmark-correctness guard — each bench's kardashev
# AOT output must equal the C reference (perf ratios live in BENCHMARKS.md).
sh_test(
    name = "smoke_test_bench",
    srcs = ["smoke_test_bench.sh"],
    data = [
        "//compiler:kardc",
        "//bench:fib.kd",
        "//bench:loop.kd",
        "//bench:collatz.kd",
        "//bench:fib.c",
        "//bench:loop.c",
        "//bench:collatz.c",
    ],
)

# Phase 56 (v9) capstone: word-frequency histogram — the full data pipeline
# (tokenize -> count in a HashMap -> rank via derived Ord -> top-N). Builds the
# real examples/wordfreq/main.kd. JIT + AOT + a constant-memory gate (the
# duplicate-key-insert leak fix keeps RSS flat).
sh_test(
    name = "smoke_test_wordfreq",
    srcs = ["smoke_test_wordfreq.sh"],
    data = [
        "//compiler:kardc",
        "//examples/wordfreq:main.kd",
    ],
)

cc_test(
    name = "lexer_test",
    srcs = ["lexer_test.cpp"],
    deps = ["//compiler:lexer"],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = ["//compiler:parser"],
)

cc_test(
    name = "typecheck_test",
    srcs = ["typecheck_test.cpp"],
    deps = [
        "//compiler:parser",
        "//compiler:typecheck",
    ],
)

cc_test(
    name = "pattern_match_test",
    srcs = ["pattern_match_test.cpp"],
    deps = ["//compiler:pattern_match"],
)

cc_test(
    name = "borrow_check_test",
    srcs = ["borrow_check_test.cpp"],
    deps = [
        "//compiler:borrow_check",
        "//compiler:parser",
        "//compiler:typecheck",
    ],
)

cc_test(
    name = "codegen_test",
    srcs = ["codegen_test.cpp"],
    # flaky: on macOS arm64 the in-process LLVM ORC JIT intermittently aborts at
    # teardown (~50% of runs) — confirmed NON-DETERMINISTIC by re-running the
    # identical commit (failed, then passed). It is ASan-clean and deterministic
    # on Linux, where the full 161-case suite always passes, so a REAL codegen
    # regression is still caught deterministically by the ubuntu job (these
    # retries are a no-op there — a deterministic test never retries). `flaky`
    # grants 3 attempts; v22 Phase 127 raises codegen_test to 5 via a scoped
    # `--flaky_test_attempts` in .bazelrc (~12.5% -> ~3% residual on macOS).
    # Root cause (an arm64 ORC-JIT teardown abort) needs macOS-arm64 hardware to
    # diagnose and remains a follow-up. This tolerates the flake WITHOUT masking
    # Linux correctness.
    flaky = True,
    deps = [
        "//compiler:codegen",
        "//compiler:parser",
        "//compiler:typecheck",
        "@llvm//:llvm",
    ],
)
