load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Make the capstone source readable by //tests:smoke_test_capstones, which
# builds the real file (rather than an inlined copy) so the test doubles as a
# build check of the shipped example.
exports_files(
    ["main.kd"],
    visibility = ["//visibility:public"],
)

# Phase 38 (v6) capstone: a FULL nested-JSON parser + serializer in kardashev.
# Parses null/bool/int/string/array/object with arbitrary nesting into a
# recursive `enum Json { ... JArr(Vec<Json>), JObj(HashMap<String,Json>) }`,
# traverses it by reference, re-serializes through a `Display` impl, and
# round-trips by deep (order-independent) equality. AOT-compiled via
# //compiler:kardc. Exercised by //tests:smoke_test_json (correctness +
# a constant-memory leak gate).
kardashev_binary(
    name = "json",
    src = "main.kd",
)
