load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Make the capstone source readable by //tests:smoke_test_capstones, which
# builds the real file (rather than an inlined copy) so the test doubles as a
# build check of the shipped example.
exports_files(
    ["main.kd"],
    visibility = ["//visibility:public"],
)

# Phase 44 (v7) capstone — JSON 2.0: a FULL nested-JSON parser + serializer in
# kardashev with `JNum(f64)` floats, string-escape decode/encode, and
# `#[derive(Clone, Eq)]` on the recursive `enum Json` (objects are an
# order-preserving Vec<Entry>). Parses, re-serializes through a `Display` impl,
# and round-trips via the DERIVED `Eq`. AOT-compiled via //compiler:kardc.
# Exercised by //tests:smoke_test_json (correctness + a constant-memory gate).
kardashev_binary(
    name = "json",
    src = "main.kd",
)
